cmake_minimum_required(VERSION 3.18)
project(Yolov10)
set("OpenCV_DIR" "path/to/opencv/build")
set("ONNXRUNTIME_DIR" "path/to/onnxruntime")
set(OpenCV_INCLUDE_DIRS ${OpenCV_DIR}\\include)
set(OpenCV_LIB_DIRS ${OpenCV_DIR}\\x64\\vc16\\lib) 
set(OpenCV_LIBS "opencv_world480d.lib" "opencv_world480.lib")    
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
include_directories(${OpenCV_INCLUDE_DIRS}) 
link_directories(${OpenCV_LIB_DIRS})  
find_package(OpenCV QUIET)	
link_libraries(${OpenCV_LIBS})
add_executable(Yolov10 main.cpp)
target_compile_features(Yolov10 PRIVATE cxx_std_14)
find_library(PATH ${ONNXRUNTIME_DIR})
target_include_directories(Yolov10 PRIVATE "${ONNXRUNTIME_DIR}/include")
target_link_libraries(Yolov10 "${ONNXRUNTIME_DIR}/lib/onnxruntime.lib")
